Ajout des logs
