# Node_Pokemon/app/controllers/auth.controller.js
@@ -1,32 +1,30 @@
 const db = require("../models");
-const Dresseur = db.dresseurs;
+const Trainer = db.trainers;
 //const Role = db.roleModel;
 //const Op = db.Sequelize.Op;
 
 var jwt = require("jsonwebtoken");
 var bcrypt = require("bcrypt");
-
+const logger = require('../../logger')
 
 
 exports.register = (req, res) => {
 
-    Dresseur.create({
+    Trainer.create({
             nom: req.body.nom,
             prenom: req.body.prenom,
             login: req.body.login,
             password: bcrypt.hashSync(req.body.password, 8),
             age: req.body.age,
         })
-        .then((dresseur) => {
-            console.log("create dresseur ==============> ", dresseur);
+        .then((trainer) => {
+            logger.info('Trainer created successfully');
 
             //Automatically create a User ACCOUNT (type 2)
-            dresseur.setRole(2).then(() => {
-                console.log(
-                    "user create successfully (avec compte subscriber) ==============> "
-                );
+            trainer.setRole(2).then(() => {
+                logger.info( trainer.nom + "is now user");
                 res.status(200).send({
-                    message: "Dresseur enregistré avec succès!",
+                    message: "Trainer enregistré avec succès!",
                 });
             });
         })
@@ -34,24 +32,26 @@ exports.register = (req, res) => {
 };
 
 exports.login = (req, res) => {
-    Dresseur.findOne({
+    Trainer.findOne({
             where: {
                 login: req.body.login,
             },
         })
-        .then((dresseur) => {
-            if (!dresseur) {
+        .then((trainer) => {
+            if (!trainer) {
+                logger.info( "Trainer not found");
                 return res.status(440).send({
-                    message: "Dresseur non trouvé."
+                    message: "Trainer non trouvé."
                 });
             }
 
             var passwordIsValid = bcrypt.compareSync(
                 req.body.password,
-                dresseur.password
+                trainer.password
             );
 
             if (!passwordIsValid) {
+                logger.info( "Invalid password");
                 return res.status(440).send({
                     accessToken: null,
                     message: "Mot de passe invalide!",
@@ -59,14 +59,14 @@ exports.login = (req, res) => {
             }
 
             var token = jwt.sign({
-                id: dresseur.id
+                id: trainer.id
             }, process.env.secret, {
                 expiresIn: 86400, // 24 heures
             });
 
             var authority;
-            dresseur.getRole().then((role) => {
-                console.log(role);
+            trainer.getRole().then((role) => {
+                logger.info( "Role: " + role.name);
                 authority = "ROLE_" + role.name.toUpperCase();
 
                 res.status(200).send({
@@ -75,8 +75,10 @@ exports.login = (req, res) => {
             });
         })
         .catch((err) => {
+            logger.error( err);
             res.status(500).send({
                 message: err.message
             });
         });
 };
+
